Fixed some spacing issues.
--HG--
extra : convert_revision : svn%3A01e103ed-f575-20b1-d296-6440ccab0075/GroupServerTemplates/trunk%40789

--- a/Presentation/Tofu/Common/css/xhtml2-globalstyle.css
+++ b/Presentation/Tofu/Common/css/xhtml2-globalstyle.css
@@ -53,7 +53,7 @@ li#profile-link a {
 }
 #Home-menu-link a, #People-menu-link a, #Groups-menu-link a, 
 #Help-menu-link a {
-	padding: 0 18px 0 10px;
+	padding: 0 18px 0 0;
 }
 
 /* Context Navigation Menu, A.K.A. sidemenu, A.K.A. menuside          */
